# Game_RunBoxRun

./: .gitignore  .nfs0000000003863c22000000be  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  runBoxRun
app/: CMakeLists.txt
app/include/app/: AssetManager.hpp  Camera.hpp  FreeflyCamera.hpp  GameManager.hpp  GameObject.hpp  GameoverScene.hpp  InGameScene.hpp  Input.hpp  InputManager.hpp  InstructionsScene.hpp  MainMenuScene.hpp  MainScene.hpp  Map.hpp  Menu.hpp  Player.hpp  PlayerHealth.hpp  Scene.hpp  SceneFactory.hpp  SceneManager.hpp  Sounds.hpp  TrackballCamera.hpp  Transform.hpp  VictoryScene.hpp  WindowEngine.hpp  ingameScene.hpp
app/src/: AssetManager.cpp  Button.cpp  Camera.cpp  Error.cpp  FreeflyCamera.cpp  GameManager.cpp  GameObject.cpp  Input.cpp  InputManager.cpp  Map.cpp  Menu.cpp  Player.cpp  PlayerHealth.cpp  Scene.cpp  SceneFactory.cpp  TrackballCamera.cpp  WindowEngine.cpp  ingameScene.cpp
assets/map/: test.txt  test2.txt  test3.txt
assets/shaders/: 3D.vs.glsl  directionallight.fs.glsl  fresnel.fs.glsl  normale.fs.glsl  pointlight.fs.glsl  texture.fs.glsl  triangle.fs.glsl  triangle.vs.glsl
doc/: CMakeLists.txt  Doxyfile-html.cmake
game/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
game/include/: Bonus.hpp  Button.hpp  Coin.hpp  Decor.hpp  Enemy.hpp  Error.hpp  EventObject.hpp  Input.hpp  InputManager.hpp  Malus.hpp  Object.hpp  Obstacle.hpp  Player.hpp  Score.hpp  Time.hpp  Ui.hpp  UiElement.hpp  ppm.h
game/include/game/: Bonus.hpp  Button.hpp  Coin.hpp  Decor.hpp  Enemy.hpp  EventObject.hpp  Game.hpp  InputManager.hpp  Malus.hpp  Object.hpp  Obstacle.hpp  Player.hpp  Score.hpp  Time.hpp  Ui.hpp  UiElement.hpp
game/src/: .~lock.test.odt#  Bonus.cpp  Button.cpp  Coin.cpp  Decor.cpp  Enemy.cpp  Error.cpp  EventObject.cpp  Input.cpp  InputManager.cpp  Malus.cpp  Object.cpp  Obstacle.cpp  Player.cpp  Score.cpp  Time.cpp  Ui.cpp  UiElement.cpp
glimac/: CMakeLists.txt
glimac/include/: tiny_obj_loader.h
glimac/include/glimac/: BBox.hpp  Box.hpp  Camera.hpp  Cone.hpp  DirectionalLight.hpp  FilePath.hpp  FreeflyCamera.hpp  Geometry.hpp  Image.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  PointLight.hpp  Program.hpp  Rec2D.hpp  Render.hpp  SDLWindowManager.hpp  Shader.hpp  Sphere.hpp  Text.hpp  Texture.hpp  TrackballCamera.hpp  WindowEngine.hpp  common.hpp  inputManager.hpp
glimac/src/: Asset.cpp  Box.cpp  Cone.cpp  FreeflyCamera.cpp  Geometry.cpp  Mesh.cpp  Model.cpp  Program.cpp  Render.cpp  Shader.cpp  Sphere.cpp  Text.cpp  Texture.cpp  TrackballCamera.cpp  WindowEngine.cpp  stb_image.h
help/Images-Generiques-master/App/: libraries.hpp
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
map/: test.txt  test2.txt
utils/: CMakeLists.txt
utils/include/utils/: Asset.hpp  EventManager.hpp  FilePath.hpp  Observable.hpp  Observer.hpp  glm.hpp
utils/src/: Asset.cpp
